# AIagent-MLE

./: .gitignore  .pre-commit-config.yaml  README.md
BE/: .env.example  pyproject.toml
BE/app/: main.py
BE/app/api/v1/endpoints/: auth.py  chat.py  document.py  user_group.py
BE/app/api/v1/schemas/: auth.py  chat.py  document.py  user_group.py
BE/app/core/: config.py  exception.py  handler.py
BE/app/crud/: chatmessage.py  conversation.py  document.py  user.py  user_group.py
BE/app/db/: database.py  models.py
BE/app/exceptions/: handler.py
BE/app/rag_graph/: edge.py  node.py  output_structure.py  prompt.py  state.py
BE/app/schemas/: qdrant_schemas.py  schemas.py
BE/app/services/: auth.py  chat.py  document.py  gemini.py  mcp_service.py  qdrant_service.py  user_group.py
BE/app/utils/: data_loader.py  datasource_url.py  gemini.py  hash_handler.py  jwt_handler.py
FE/: main.py  pyproject.toml
FE/app/: 1_Login.py  main.py
FE/app/api/: auth.py  client.py
FE/app/components/: sidebar.py
FE/app/core/: config.py  exception.py
FE/app/navigations/account/: join.py  login.py
FE/app/schema/: response.py
FE/app/utils/: auth.py
